# opennarrator

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  docker-entrypoint.sh  install.sh  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  REVIEW_SUMMARY.md  SPEC.md  TTS_ENGINES.md
spikes/001-piper-feasibility/: README.md  spike.py  spike2_quality.py  spike3_libritts.py
spikes/002-kokoro-feasibility/: spike.py
spikes/003-f5-tts-cpu-performance/: spike.py  spike_rtf.py
src/opennarrator/: __init__.py  __main__.py  config.py  exceptions.py  types.py
src/opennarrator/audio/: ffmpeg.py
src/opennarrator/cli/: convert.py  main.py  preview.py  server.py  voices.py
src/opennarrator/engines/: base.py  kokoro.py  null_engine.py
src/opennarrator/pipeline/: extractor.py  normalizer.py  packager.py  synthesizer.py
src/opennarrator/server/: app.py
src/opennarrator/server/static/: index.html
src/opennarrator/voice/: manager.py  registry.py
tests/fixtures/: sample.epub
tests/unit/: test_config.py  test_docx_extractor.py  test_extractor.py  test_ffmpeg.py  test_kokoro_engine.py  test_normalizer.py  test_null_engine.py  test_packager.py  test_synthesizer.py  test_txt_extractor.py  test_voice_manager.py
