[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opennarrator"
version = "0.1.0"
description = "Open-source audiobook creator — convert ebooks to M4B using open-source TTS engines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sleuthy-Sloth" }]

dependencies = [
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "ebooklib>=0.18",
  "pymupdf>=1.24.0",
  "huggingface-hub>=0.22.0",
  "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-setuptools",
  "types-PyYAML",
]
kokoro = ["kokoro>=0.7.0"]

[project.scripts]
opennarrator = "opennarrator.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/opennarrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["ebooklib.*", "pymupdf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opennarrator.config", "opennarrator.pipeline.extractor"]
ignore_missing_imports = true
disable_error_code = [
  "attr-defined",
  "no-any-return",
  "type-arg",
  "no-untyped-def",
  "no-untyped-call",
]

[[tool.mypy.overrides]]
module = ["ebooklib.*", "kokoro", "soundfile"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests requiring external dependencies",
]
